# qualidade-de-vida-urbana

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  seed.py
.astro/: config.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 96d80da7dab7_criação_da_tabela_de_usuários.py  9fb0c452009f_criando_tudo_no_dev.py
app/: database.py
app/models/: user_model.py
app/repositories/: user_repository.py
app/routes/: user_router.py
app/schemas/: air_quality_schema.py  data_souce_schema.py  enums.py  favorite_place.py  message_schema.py  place_schema.py  pollutants_schema.py  sensor_schema.py  subscriptionPlansType.py  subscriptionType.py  subscription_plans_type_schema.py  subscription_type_schema.py  user.py  user_schema.py  weather_schema.py
app/use_cases/: user_use_case.py
dags/: air_quality_dag.py  prediction_dag.py
data/bronze/: pollutants_data.csv  pollutants_data.json  pollutants_data.parquet
data/diamond/: codes.parquet  days.parquet  months.parquet  pollutants_data.parquet  units.parquet  years.parquet
data/gold/: pollutants_data.parquet
data/silver/: pollutants_data.parquet
fetcher/: fetch_data.py
pipe/: generate_df.py  generate_parquet.py  json_data.py
sql/: raw-creation.sql
tests/: test_create_postgres_tables.py  test_fetch_data.py  test_generate_df.py  test_generate_parquet.py  test_import_dags.py  test_json_data.py  test_push_to_postgres.py  test_push_to_s3.py  test_task_fetch_data.py  test_task_generate_data.py
(+10 files in other folders)
