[project]
name = "qualidade-de-vida-urbana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow-providers-postgres>=6.1.1",
    "ipykernel>=6.29.5",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]
